--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         #div3 { background-color: red; width: 300px; height: 200px; position: relative; left: 350px; top: 200px; }
         #div4 { background-color: aqua; width: 150px; height: 150px; position: relative; float: left;   top: -50px; left: 20px; }
         #div5 { background-color: gray; width: 200px; height: 200px; position: relative; z-index: 0; top: -300px; left: 250px; }
-        #div6 { background-color: maroon; width: 100px; height: 100px; position: relative; float: right; }
+        #div6 { background-color: maroon; width: 100px; height: 100px; position: relative; top: -400px; left: 20px;}
         #div7 { background-color: navy; width: 400px; height: 400px; position: absolute; top: 0; left: 0; z-index: 10; }
         #div8 { background-color: #f87604; width: 400px; height: 300px; position: absolute; top: 300px; left: 350px; z-index: 10; }
     </style>
