--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 
 <head>
     <style>
-        div { z-index: 500; }
+        span {  z-index: 1; position: relative; }
+        div { z-index: 500;color: #fff; }
         #div1 { background-color: fuchsia; height: 200px; width: 700px; margin-bottom: -50px; position: relative;}
         #div2 { background-color: #00ff00; width: 500px; height: 500px; position: relative; }
-        #div3 { background-color: red; width: 300px; height: 200px; position: relative; left: 350px; top: 200px; }
+        #div3 { background-color: red; width: 300px; height: 200px; position: relative; left: 0px; top: 20px; }
         #div4 { background-color: aqua; width: 150px; height: 150px; position: relative; float: left;   top: -50px; left: 20px; }
         #div5 { background-color: gray; width: 200px; height: 200px; position: relative; z-index: 0; top: -300px; left: 250px; }
         #div6 { background-color: maroon; width: 100px; height: 100px; position: relative; top: -400px; left: 20px;}
@@ -14,12 +15,14 @@
     </style>
 </head>
 <body>
-    <div id="div1"></div>
-    <div id="div2"><div id="div3"></div></div>
-    <div id="div4"></div>
-    <div id="div5"></div>
-    <div id="div6"></div>
-    <div id="div7"></div>
-    <div id="div8"></div>
+    body-start
+    <div id="div1">div1</div>
+    <div id="div2">div2<div id="div3"></div><span>div3 span</span></div>
+    <div id="div4">div4</div>
+    <div id="div5">div5</div>
+    <div id="div6">div6</div>
+    <div id="div7">div7</div>
+    <div id="div8">div8</div>
+    body-end
 </body>
 </html>
